SUBDIRS = main modules/scanners modules/wordlists

devdocs:
	doxygen $(top_srcdir)/DoxyFile

all:
	@echo "**********************************************"
	@echo "*                  LOCUST                    *"
	@echo "* The Open Source Network Security Framework *"
	@echo "*                                            *"
	@echo "*       Now you can run 'make install'       *"
	@echo "*                                            *"
	@echo "**********************************************"
